Add Search function

--- a/YamFront/views/pages/best.ejs
+++ b/YamFront/views/pages/best.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="wrap">
-    <%-include('../partials/nav.ejs');-%>
+    <%-include('../partials/nav.ejs' , {categories : categories});-%>
     <%-include('../partials/pick_icon.ejs');-%>
     <!--pick 아이콘-->
     <div id="container">
