--- a/YamFront/views/pages/petinfo.ejs
+++ b/YamFront/views/pages/petinfo.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="wrap">
-    <%-include('../partials/nav.ejs');-%>
+    <%-include('../partials/nav.ejs' , {categories : categories});-%>
     <!--카테고리헤더-->
     <%-include('../partials/pick_icon.ejs');-%>
     <!--pick 아이콘-->
