--- a/YamFront/views/pages/yamspick.ejs
+++ b/YamFront/views/pages/yamspick.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="wrap">
-    <%-include('../partials/nav.ejs');-%>
+    <%-include('../partials/nav.ejs' , {categories : categories});-%>
     <!--헤더-->
     <%-include('../partials/pick_icon.ejs');-%>
     <!--pick 아이콘-->
