change href urls for routed urls

--- a/YamFront/views/index.ejs
+++ b/YamFront/views/index.ejs
@@ -10,10 +10,10 @@
 <div id="wrap">
   <%-include('partials/nav.ejs',{categories});-%>
   <!--헤더-->
-  <a href="html/bomspick.html">
+  <a href="/signaturepick/bom">
     <div class="BOM_icon">BOM's pick</div>
   </a>
-  <a href="html/yamspick.html">
+  <a href="/signaturepick/yam">
     <div class="YAM_icon">YAM's pick</div>
   </a>
   <!-- 픽 고정배너-->
