--- a/YamFront/views/pages/signin.ejs
+++ b/YamFront/views/pages/signin.ejs
@@ -26,7 +26,7 @@
             <a href="#" class="item2 id_find">아이디 찾기</a>
 
         </div>
-        <a href="../html/join.html" class="login_img">
+        <a href="/auth/signin" class="login_img">
             <img src="../images/joinLink.svg" alt="회원가입창 이동">
         </a>
     </div>
