--- a/YamFront/views/partials/pick_icon.ejs
+++ b/YamFront/views/partials/pick_icon.ejs
@@ -1,6 +1,6 @@
-<a href="/bomspick">
+<a href="/signaturepick/bom">
     <div class="BOM_icon">BOM's pick</div>
 </a>
-<a href="/yamspick">
+<a href="/signaturepick/yam">
     <div class="YAM_icon">YAM's pick</div>
 </a>
