--- a/YamFront/views/partials/pagination.ejs
+++ b/YamFront/views/partials/pagination.ejs
@@ -1,18 +1,85 @@
+<script>
+    function insertParam(key, value) {
+        key = encodeURIComponent(key);
+        value = encodeURIComponent(value);
+
+        // kvp looks like ['key1=value1', 'key2=value2', ...]
+        var kvp = document.location.search.substr(1).split('&');
+        let i = 0;
+
+        for (; i < kvp.length; i++) {
+            if (kvp[i].startsWith(key + '=')) {
+                let pair = kvp[i].split('=');
+                pair[1] = value;
+                kvp[i] = pair.join('=');
+                break;
+            }
+        }
+
+        if (i >= kvp.length) {
+            kvp[kvp.length] = [key, value].join('=');
+        }
+
+        // can return this or...
+        let params = kvp.join('&');
+
+        // reload page with new params
+        document.location.search = params;
+    }
+</script>
+<style>
+    .pagination li{
+        display: inline-block;
+    }
+    /*활성화된 li 태그 셀렉트*/
+    .pagination .active {
+        background-color: #008aff;
+        display: inline-block;
+    }
+
+    /*양 옆 끝으로 갔을때의 화살표 셀렉트*/
+    .pagination .disabled {
+        display: none;
+    }
+
+
+</style>
 <% if (products.contents.length != 0) { %>
 <div class="" style="text-align:center;">
     <ul class="pagination">
-        <li <%if(products.page == 1){%> class="disabled" <%}else{%>class="waves-effect" <%}%> >
-            <a <%if(products.page > 1){%> href="?page=<%=products.page-1%>" <%}%>>
+        <li
+        <% if(products.page == 1){ %> class="disabled"
+                                      <% }else{ %>class="waves-effect"
+                <% } %>
+        >
+            <button
+                    <% if(products.page > 1){ %>
+                    onclick="insertParam('page',<%= products.pnStart-1 %>)"
+                    <% } %>
+            >
                 <i class="material-icons">chevron_left</i>
-            </a>
+            </button>
         </li>
-        <% for(var i=products.pnStart; i<=products.pnEnd; i++){ %> <li <%if(i===products.page){%> class="active"
-                <%}%>><a href="?page=<%=i%>"><%=i%></a></li>
+        <% for(var i = products.pnStart; i <= products.pnEnd; i++){ %>
+        <li
+        <% if(i === products.page){ %> class="active"
+                <% } %>
+        >
+            <button onclick="insertParam('page',<%= i %>)"><%= i %></button>
+        </li>
         <% } %>
-        <li <%if(products.page == products.pnTotal){%> class="disabled" <%}else{%> class="waves-effect" <%}%>>
-            <a <%if(products.page < products.pnTotal){%> href="?page=<%=products.page+1%>" <%}%> class="waves-effect">
+        <li
+        <% if(products.page == products.pnTotal){ %> class="disabled"
+        <% }else{ %> class="waves-effect"
+                <% } %>
+        >
+            <button
+                    <% if(products.page < products.pnTotal){ %>
+                    onclick="insertParam('page',<%= i %>)"
+                    <% } %>
+                    class="waves-effect">
                 <i class="material-icons">chevron_right</i>
-            </a>
+            </button>
         </li>
     </ul>
 </div>
