비밀번호 재설정 페이지 추가 및 링크

--- a/YamFront/views/pages/signin.ejs
+++ b/YamFront/views/pages/signin.ejs
@@ -22,8 +22,7 @@
             <label>
                 <input type="checkbox" class="item2 loginCheck_txt">아이디 저장</input>
             </label>
-            <a href="#" class="item2 pwd_find">비밀번호 찾기</a>
-            <a href="#" class="item2 id_find">아이디 찾기</a>
+            <a href="/auth/reset" class="item2 pwd_find">비밀번호 재설</a>
 
         </div>
         <a href="/auth/signin" class="login_img">
