--- a/YamFront/views/pages/request-reset.ejs
+++ b/YamFront/views/pages/request-reset.ejs
@@ -12,7 +12,7 @@
         <div class="login_text">비밀번호 재설정 요청</div>
         <div class="login_box">
             <div class="item login_txt">이메일을 입력해 비밀번호 재설정을 요청해주세요!</div>
-            <form action=<%="/auth/forgot" %> method="post">
+            <form action=<%="/auth/request-reset" %> method="post">
                 <input type="text" class="item id_box" name="email" placeholder="이메일을 입력해주세요!">
                 <button type="submit" class="item log_box" onclick="alert('이메일로 재설정 링크를 보냈습니다.\n메일을 확인해주세요!');">재설정</button>
             </form>
