--- a/YamFront/views/pages/signin.ejs
+++ b/YamFront/views/pages/signin.ejs
@@ -22,7 +22,7 @@
             <label>
                 <input type="checkbox" class="item2 loginCheck_txt">아이디 저장</input>
             </label>
-            <a href="/auth/reset" class="item2 pwd_find">비밀번호 재설정</a>
+            <a href="/auth/request-reset" class="item2 pwd_find">비밀번호 재설정</a>
 
         </div>
         <a href="/auth/signin" class="login_img">
