--- a/YamAdmin/views/pages/banner.ejs
+++ b/YamAdmin/views/pages/banner.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="wrap">
-    <% include header_login.ejs %>
+    <%- include ../partials/header_login.ejs -%>
     <div class="container">
         <div class="index_title">
             메인 배너 관리
