--- a/YamAdmin/views/pages/yamspick.ejs
+++ b/YamAdmin/views/pages/yamspick.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CAT BEST</title>
+    <title>YAM's pick</title>
     <link rel='stylesheet' href='/stylesheets/header.css' />
     <link rel='stylesheet' href='/stylesheets/container.css' />
     <link rel='stylesheet' href='/stylesheets/banner.css' />
@@ -9,11 +9,11 @@
 </head>
 <body>
 <div class="wrap">
-    <% include header_login.ejs %>
+    <%- include ../partials/header_login.ejs -%>
     <div class="container">
         <div style="padding-bottom: 30px">
             <div class="index_title">
-                CAT BEST 관리
+                YAM's pick 관리
             </div>
             <div class="banner_title">
                 PRODUCT 관리
