--- a/YamFront/views/partials/nav.ejs
+++ b/YamFront/views/partials/nav.ejs
@@ -87,7 +87,7 @@
         <div class="search_area">
             <form action="/product">
                 <input type="text" id="search_form" name="query" class="search_text">
-                <input type="submit" class="search_img" src="images/search.svg">
+                <input type="submit" class="search_img">
             </form>
         </div>
     </div>
