--- a/YamFront/views/partials/navigation.ejs
+++ b/YamFront/views/partials/navigation.ejs
@@ -1,5 +1,5 @@
 <a href=<%= "/product?categorySeq=" + category.categorySeq %>>
-    <div>
+    <div class="category_text">
         <%= category.categoryName %>
     </div>
 </a>
