--- a/YamFront/views/pages/product-list.ejs
+++ b/YamFront/views/pages/product-list.ejs
@@ -46,7 +46,7 @@
             >
             <% currentCategories.reverse() %>
             <% currentCategories.forEach( category => { %>
-                <li><a href=<%= '/product?categorySeq=' + category.categorySeq %>><%= category.categoryName %></a></li>
+                <li><a href=<%= '/product?categorySeq=' + category.categorySeq %>><%= category.categoryName %> </a></li>
             <% }); %>
             <% currentCategories.reverse() %>
         </ul>
@@ -63,7 +63,8 @@
         <% if(query){ %>
             <div class="cate_text"><%= '"' + query + '"' + "에 대한 검색 결과가 " + products.totalCount.toLocaleString() + "개 있습니다." %></div>
         <% }else{ %>
-            <div class="cate_text"><%= currentCategories[0].categoryName + " 카테고리에 상품이 " + products.totalCount.toLocaleString() + "개 있습니다." %></div>
+                <div class="cate_text"><strong class="cate_color"><%= currentCategories[0].categoryName%></strong> 카테고리에 상품이
+                    <strong class="cate_color"><%= products.totalCount.toLocaleString()%></strong>개 있습니다.</div>
         <% } %>
         <div class="cate_sort">
             <ul>
