--- a/YamAdmin/views/pages/bomspick.ejs
+++ b/YamAdmin/views/pages/bomspick.ejs
@@ -1,5 +1,34 @@
 <!DOCTYPE html>
 <html>
+<script>
+    function insertParam(key, value) {
+        key = encodeURIComponent(key);
+        value = encodeURIComponent(value);
+
+        // kvp looks like ['key1=value1', 'key2=value2', ...]
+        var kvp = document.location.search.substr(1).split('&');
+        let i = 0;
+
+        for (; i < kvp.length; i++) {
+            if (kvp[i].startsWith(key + '=')) {
+                let pair = kvp[i].split('=');
+                pair[1] = value;
+                kvp[i] = pair.join('=');
+                break;
+            }
+        }
+
+        if (i >= kvp.length) {
+            kvp[kvp.length] = [key, value].join('=');
+        }
+
+        // can return this or...
+        let params = kvp.join('&');
+
+        // reload page with new params
+        document.location.search = params;
+    }
+</script>
 <head>
     <title>BOM's pick</title>
     <link rel='stylesheet' href='/stylesheets/header.css' />
@@ -9,6 +38,7 @@
 </head>
 <body>
 <div class="wrap">
+    <%- include ../partials/deleteprod%>
     <%- include ../partials/header_login -%>
     <div class="container">
         <div style="padding-bottom: 30px">
@@ -19,11 +49,22 @@
                 PRODUCT 관리
             </div>
             <ol>
-                <% products.forEach(product => { %>
-                    <li><%= product.name %><button>삭제</button></li>
-                <% }) %>
+                <% if (products.contents.length != 0 ) { %>
+                    <% products.contents.forEach(function(product) { %>
+                        <li>
+                            <%- product.name %>
+                            <button onclick="delete_product(<%- product.prodSeq%>);">삭제</button>
+                        </li>
+                    <% }); %>
+                <% } else { %>
+                    <tr>
+                        <td>등록된 상품이 없습니다</td>
+                    </tr>
+                <% } %>
             </ol>
         </div>
+        <%- include('../partials/pagination', {products: products}); -%>
+
         <div>
             <div class="banner_title">상품 추가</div>
             <div class="add_img">
