--- a/YamFront/views/pages/product-list.ejs
+++ b/YamFront/views/pages/product-list.ejs
@@ -39,6 +39,7 @@
 </div>
 <%- include('../partials/pick_icon.ejs'); -%>
 <!--픽 고정배너-->
+<%-include('../partials/floatbanner.ejs');-%>
 <div id="C_container">
     <div class="cateItem1">
         <ul class="cate_inav">
