--- a/YamFront/views/pages/signin.ejs
+++ b/YamFront/views/pages/signin.ejs
@@ -9,6 +9,7 @@
 <div id="wrap">
     <%-include('../partials/nav.ejs' , {categories : categories});-%>
     <%-include('../partials/pick_icon.ejs');-%>
+    <%-include('../partials/floatbanner.ejs');-%>
     <!--pick 아이콘-->
     <div id="container">
         <div class="login_text">LOGIN</div>
