--- a/YamFront/views/pages/signup.ejs
+++ b/YamFront/views/pages/signup.ejs
@@ -11,6 +11,7 @@
     <%- include('../partials/pick_icon.ejs'); -%>
     <!--pick 아이콘-->
     <div id="container">
+        <%-include('../partials/floatbanner.ejs');-%>
         <div class="join_text">회원가입</div>
         <div class="join_box">
             <form action="/auth/signup" method="post">
