--- a/YamFront/views/index.ejs
+++ b/YamFront/views/index.ejs
@@ -18,14 +18,7 @@
   </a>
   <!-- 픽 고정배너-->
   <div id="container">
-    <div class="float_area">
-      <div class="float_menu">
-        <div class="side_banner">
-          <div class="side_title">추천상품</div>
-        </div>
-      </div>
-
-    </div>
+    <%-include('partials/floatbanner.ejs');-%>
     <div class="main_visual">
       <div class="slide">
         <ul>
