--- a/YamFront/views/partials/header.ejs
+++ b/YamFront/views/partials/header.ejs
@@ -3,3 +3,4 @@
 <link rel="stylesheet" href="../stylesheets/floatbanner.css">
 <link rel="stylesheet" href="../stylesheets/pick_icon.css">
 <script type="text/javascript" src="javascripts/main.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
