admin 얌픽 봄픽 완성

--- a/YamAdmin/views/pages/bomspick.ejs
+++ b/YamAdmin/views/pages/bomspick.ejs
@@ -28,6 +28,41 @@
         // reload page with new params
         document.location.search = params;
     }
+
+    async function isChecked(e){
+        let ischecked = '';
+
+        if(e.target.checked){
+            ischecked = 1;
+        }else{
+            ischecked = 0;
+        }
+
+        const prodSeq = e.target.value;
+        console.log(prodSeq)
+
+        let response = await fetch('https://api.bomandyam.shop:3000/product/signaturepick/'+prodSeq,{
+            method:'PATCH',
+            headers:{
+                'Content-type' : 'application/json; charset=UTF-8' ,
+                'x-access-token': getCookie('accessToken'),
+
+            },
+            body: JSON.stringify({
+                who : 'bom',
+                isChecked : ischecked,
+            })
+        })
+
+        if(response.status===200) {
+            console.log('변경완료')
+        }
+        else if(response.status===403){
+            alert('토큰이 만료되었습니다. 다시 로그인 해주세요')
+            logout();
+        }
+    }
+
 </script>
 <head>
     <title>BOM's pick</title>
@@ -52,10 +87,14 @@
             <ol>
                 <% if (products.contents.length != 0 ) { %>
                     <% products.contents.forEach(function(product) { %>
-                        <li>
+                        <li class="prod_list">
+                            <%- product.prodSeq %> .
                             <%- product.name %>
-                            <button onclick="delete_product(<%- product.prodSeq%>);">삭제</button>
-                        </li>
+                                <input type='checkbox' class='checkbox' value='<%= product.prodSeq %>' onclick="isChecked(event);"
+                                       <% if(product.bomspick===1){ %>checked
+                                        <% } %>
+                                >
+                        </li    >
                     <% }); %>
                 <% } else { %>
                     <tr>
@@ -66,22 +105,28 @@
         </div>
         <%- include('../partials/pagination', {products: products}); -%>
 
-        <div>
-            <div class="banner_title">상품 추가</div>
-            <div class="add_img">
-                <div class="add_title">상품 이미지</div>
-                <input style="padding-top: 5px" type="file">
+        <form action="/bomspick" method="post">
+            <div>
+                <div class="banner_title">상품 추가</div>
+                <div class="add_img">
+                    <div class="add_title">상품 이미지</div>
+                    <input style="padding-top: 5px" type="file" name="prod_file">
+                </div>
+                <div class="add_name">
+                    <div class="add_title">상품명</div>
+                    <input type="text" name="prod_title" placeholder="상품명">
+                </div>
+                <div class="add_price">
+                    <div class="add_title">상품 가격</div>
+                    <input type="text" name="prod_price" placeholder="상품가격">
+                </div>
+                <div class="add_cate">
+                    <div class="add_title">카테고리</div>
+                    <input type="text" name="prod_cate" placeholder="카테고리 번호 입력">
+                </div>
             </div>
-            <div class="add_name">
-                <div class="add_title">상품명</div>
-                <input type="text">
-            </div>
-            <div class="add_price">
-                <div class="add_title">상품 가격</div>
-                <input type="text">
-            </div>
-        </div>
-        <button class="file_btn">상품등록</button>
+            <button type="submit" class="file_btn">상품등록</button>
+        </form>
     </div>
 </div>
 </body>
