--- a/YamAdmin/public/stylesheets/banner.css
+++ b/YamAdmin/public/stylesheets/banner.css
@@ -13,11 +13,12 @@
     padding: 40px 0 40px 0;
 }
 
-ul{
+ol{
     padding-left: 0;
+    list-style: none;
 }
 
-ul li{
+ol li{
     font-weight: bolder;
     font-size: 30px;
     color: #6F6F6F;
