--- a/YamAdmin/public/stylesheets/product.css
+++ b/YamAdmin/public/stylesheets/product.css
@@ -1,3 +1,13 @@
+.prod_list{
+    display: flex;
+    justify-content: space-between;
+}
+
+.checkbox{
+    width: 30px;
+    height: 30px;
+}
+
 .add_img{
     display: flex;
     align-items: center;
@@ -18,6 +28,11 @@
 
 .add_price{
     display: flex;
+}
+
+.add_cate{
+    display: flex;
+    padding-top: 20px;
 }
 
 input[type="text"]{
