--- a/YamAdmin/views/pages/catbest.ejs
+++ b/YamAdmin/views/pages/catbest.ejs
@@ -19,9 +19,19 @@
                 PRODUCT 관리
             </div>
             <ol>
-                <% products.forEach(product => { %>
-                    <li><%= product.name %><button>삭제</button></li>
-                <% }) %>
+                <% if (products.contents.length != 0 ) { %>
+                    <% products.contents.forEach(function(product) { %>
+                        <li>
+                            <%- product.prodSeq %> .
+                            <%- product.name %>
+                            <button onclick="delete_product(<%- product.prodSeq%>);">삭제</button>
+                        </li>
+                    <% }); %>
+                <% } else { %>
+                    <tr>
+                        <td>등록된 상품이 없습니다</td>
+                    </tr>
+                <% } %>
             </ol>
         </div>
         <div>
