--- a/YamAdmin/views/pages/yamspick.ejs
+++ b/YamAdmin/views/pages/yamspick.ejs
@@ -7,6 +7,70 @@
     <link rel='stylesheet' href='/stylesheets/banner.css' />
     <link rel='stylesheet' href='/stylesheets/product.css' />
 </head>
+<script>
+    function insertParam(key, value) {
+        key = encodeURIComponent(key);
+        value = encodeURIComponent(value);
+
+        // kvp looks like ['key1=value1', 'key2=value2', ...]
+        var kvp = document.location.search.substr(1).split('&');
+        let i = 0;
+
+        for (; i < kvp.length; i++) {
+            if (kvp[i].startsWith(key + '=')) {
+                let pair = kvp[i].split('=');
+                pair[1] = value;
+                kvp[i] = pair.join('=');
+                break;
+            }
+        }
+
+        if (i >= kvp.length) {
+            kvp[kvp.length] = [key, value].join('=');
+        }
+
+        // can return this or...
+        let params = kvp.join('&');
+
+        // reload page with new params
+        document.location.search = params;
+    }
+
+    async function isChecked(e){
+        let ischecked = '';
+
+        if(e.target.checked){
+            ischecked = 1;
+        }else{
+            ischecked = 0;
+        }
+
+        const prodSeq = e.target.value;
+        console.log(prodSeq)
+
+        let response = await fetch('https://api.bomandyam.shop:3000/product/signaturepick/'+prodSeq,{
+            method:'PATCH',
+            headers:{
+                'Content-type' : 'application/json; charset=UTF-8' ,
+                'x-access-token': getCookie('accessToken'),
+
+            },
+            body: JSON.stringify({
+                who : 'yam',
+                isChecked : ischecked,
+            })
+        })
+
+        if(response.status===200) {
+            console.log('변경완료')
+        }
+        else if(response.status===403){
+            alert('토큰이 만료되었습니다. 다시 로그인 해주세요')
+            logout();
+        }
+    }
+
+</script>
 <body>
 <div class="wrap">
     <%- include ../partials/header_login.ejs -%>
@@ -19,28 +83,26 @@
                 PRODUCT 관리
             </div>
             <ol>
-                <% products.forEach(product => { %>
-                    <li><%= product.name %><button>삭제</button></li>
-                <% }) %>
+                <% if (products.contents.length != 0 ) { %>
+                    <% products.contents.forEach(function(product) { %>
+                        <li class="prod_list">
+                            <%- product.prodSeq %> .
+                            <%- product.name %>
+                            <input type='checkbox' class='checkbox' value='<%= product.prodSeq %>' onclick="isChecked(event);"
+                                   <% if(product.yamspick===1){ %>checked
+                                    <% } %>
+                            >
+                        </li>
+                    <% }); %>
+                <% } else { %>
+                    <tr>
+                        <td>등록된 상품이 없습니다</td>
+                    </tr>
+                <% } %>
             </ol>
         </div>
-        <div>
-            <div class="banner_title">상품 추가</div>
-            <div class="add_img">
-                <div class="add_title">상품 이미지</div>
-                <input style="padding-top: 5px" type="file">
-            </div>
-            <div class="add_name">
-                <div class="add_title">상품명</div>
-                <input type="text">
-            </div>
-            <div class="add_price">
-                <div class="add_title">상품 가격</div>
-                <input type="text">
-            </div>
-        </div>
-        <button class="file_btn">상품등록</button>
-    </div>
+        <%- include('../partials/pagination', {products: products}); -%>
+
 </div>
 </body>
 </html>
